force-app/main/default/objects/Incentive_Teams__c/Incentive_Teams__c.object-meta.xml
<CustomObject>
    <label>Incentive Teams</label>
    <nameField>
        <displayFormat>INT-{00000}</displayFormat>
        <label>Incentive Teams Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Incentive Teams</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>