force-app/main/default/objects/Incentive_Teams__c/fields/Brand_Evangelist__c.field-meta.xml
<CustomField>
    <fullName>Brand_Evangelist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brand Evangelist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Incentive_Teamsptan</relationshipName>
    <type>Lookup</type>
</CustomField>