force-app/main/default/objects/Incentive_Teams__c/fields/Digital_Marketing_Head__c.field-meta.xml
<CustomField>
    <fullName>Digital_Marketing_Head__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Digital Marketing Head</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Incentive_TeamshuLe</relationshipName>
    <type>Lookup</type>
</CustomField>