force-app/main/default/objects/Incentive_Teams__c/fields/GM_Marketing__c.field-meta.xml
<CustomField>
    <fullName>GM_Marketing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GM - Marketing</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Incentive_TeamspUB8</relationshipName>
    <type>Lookup</type>
</CustomField>