force-app/main/default/objects/Incentive_Teams__c/fields/Loyalty_Sales_Executive__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Sales_Executive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loyalty Sales Executive</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Incentive_TeamshzeX</relationshipName>
    <type>Lookup</type>
</CustomField>