force-app/main/default/objects/Incentive_Teams__c/fields/Mall_Team_Lead__c.field-meta.xml
<CustomField>
    <fullName>Mall_Team_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mall Team Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Incentive_Teams8</relationshipName>
    <type>Lookup</type>
</CustomField>