force-app/main/default/objects/Incentive_Teams__c/fields/Marketing_Head__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Head__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Marketing Head</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Incentive_Teams6</relationshipName>
    <type>Lookup</type>
</CustomField>