force-app/main/default/objects/Incentive_Teams__c/fields/TeleSales_Head__c.field-meta.xml
<CustomField>
    <fullName>TeleSales_Head__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TeleSales Head</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Incentive_TeamshwGt</relationshipName>
    <type>Lookup</type>
</CustomField>