force-app/main/default/objects/Incentive_Teams__c/fields/TL_Channel_Relation__c.field-meta.xml
<CustomField>
    <fullName>TL_Channel_Relation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TL Channel Relation</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Incentive_Teams4</relationshipName>
    <type>Lookup</type>
</CustomField>