force-app/main/default/objects/Incentive_Teams__c/fields/Tower__c.field-meta.xml
<CustomField>
    <fullName>Tower__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tower</label>
    <referenceTo>PropStrength__Tower__c</referenceTo>
    <relationshipLabel>Incentive Teams</relationshipLabel>
    <relationshipName>Incentive_Teams</relationshipName>
    <type>Lookup</type>
</CustomField>